gitops/togglemaster-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: togglemaster-ingress
  namespace: auth-namespace  # O Ingress geralmente fica no namespace principal ou do Gateway
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:    
        paths:
          # Rota para o serviço de Autenticação
          - path: /auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8001
          # Rota para o serviço de Avaliação
          - path: /evaluation/?(.*)
            pathType: Prefix
            backend:
              service:
                name: evaluation-service.evaluation-namespace.svc.cluster.local
                port:
                  number: 8004
          # Rota para o serviço de Analytics
          - path: /analytics/?(.*)
            pathType: Prefix
            backend:
              service:
                name: analytics-service.analytics-namespace.svc.cluster.local
                port:
                  number: 8005
